# terminaltexteffects

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  __main__.py  default.nix  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  test_tte.py  tox.ini  tte.py
appguide/: index.html
archived_effects/: effect_columnslide.py  effect_cycle.py  effect_rings.py  effect_rowmerge.py  effect_rowslide.py
changeblog/: index.html
changeblog/changeblog/: index.html
changeblog/changeblog_0.10.0/: index.html
changeblog/changeblog_0.11.0/: index.html
changeblog/changeblog_0.12.0/: index.html
changeblog/changeblog_0.13.0/: index.html
changeblog/changeblog_0.14.0/: index.html
changeblog/changeblog_0.15.0/: index.html
cookbook/: index.html
docs/: appguide.md  changeblog.md  cookbook.md  index.md  installation.md  libguide.md  performance.md  quickstart.md  reference.md  showroom.md
docs/changeblog/: changeblog.md  changeblog_0.10.0.md  changeblog_0.11.0.md  changeblog_0.12.0.md  changeblog_0.13.0.md  changeblog_0.14.0.md  changeblog_0.15.0.md
docs/effectguide/: effectguide.md  effectguide_lesson0.md
docs/effects/: beams.md  binarypath.md  blackhole.md  bouncyballs.md  bubbles.md  burn.md  colorshift.md  crumble.md  decrypt.md  errorcorrect.md  expand.md  fireworks.md  highlight.md  laseretch.md  matrix.md  middleout.md  orbittingvolley.md  overflow.md  pour.md  print.md  rain.md  randomsequence.md  rings.md  scattered.md  slice.md  slide.md  smoke.md  spotlights.md  spray.md  swarm.md  sweep.md  synthgrid.md  thunderstorm.md  unstable.md  verticalslice.md  vhstape.md  waves.md  wipe.md
docs/engine/: basecharacter.md  baseconfig.md  baseeffect.md  eventhandler.md
effect_archive/: effect_dev_spaceflight.py  effect_dev_tesselated.py  effect_dev_worm.py
effectguide/effectguide/: index.html
effectguide/effectguide_lesson0/: index.html
effects/: base_effect.py  columnslide.py  decrypt.py  effect.py  effect_char.py  effect_template.py  expand.py  pour.py  rain.py  random_sequence.py  rowmerge.py  rowslide.py  scattered.py  shootingstar.py  sparkler.py  verticalslice.py
effects/beams/: index.html
effects/binarypath/: index.html
effects/blackhole/: index.html
effects/bouncyballs/: index.html
effects/bubbles/: index.html
effects/burn/: index.html
effects/colorshift/: index.html
effects/crumble/: index.html
effects/decrypt/: index.html
effects/errorcorrect/: index.html
effects/expand/: index.html
effects/fireworks/: index.html
effects/highlight/: index.html
effects/laseretch/: index.html
effects/matrix/: index.html
effects/middleout/: index.html
effects/orbittingvolley/: index.html
effects/overflow/: index.html
effects/pour/: index.html
effects/print/: index.html
effects/rain/: index.html
effects/randomsequence/: index.html
effects/rings/: index.html
effects/scattered/: index.html
effects/slice/: index.html
effects/slide/: index.html
effects/smoke/: index.html
effects/spotlights/: index.html
effects/spray/: index.html
effects/swarm/: index.html
effects/sweep/: index.html
effects/synthgrid/: index.html
effects/thunderstorm/: index.html
effects/unstable/: index.html
effects/verticalslice/: index.html
effects/vhstape/: index.html
effects/waves/: index.html
effects/wipe/: index.html
engine/basecharacter/: index.html
engine/baseconfig/: index.html
engine/baseeffect/: index.html
engine/eventhandler/: index.html
engine/gradient/: index.html
explanation/: index.html
how-to-guides/: index.html
installation/: index.html
libguide/: index.html
quickstart/: index.html
reference/: index.html
showroom/: index.html
terminaltexteffects/: __init__.py  __main__.py  base_character.py  base_effect.py  character.py  effect.py  tte.py
terminaltexteffects/effects/: __init__.py  columnslide.py  effect.py  effect_beam.py  effect_beams.py  effect_binarypath.py  effect_blackhole.py  effect_bouncyballs.py  effect_bubbles.py  effect_burn.py  effect_colorshift.py  effect_columnslide.py  effect_crumble.py  effect_cycle.py  effect_decrypt.py  effect_dev.py  effect_dev_paint.py  effect_dev_worm.py  effect_errorcorrect.py  effect_expand.py  effect_fireworks.py  effect_highlight.py  effect_laseretch.py  effect_matrix.py  effect_middleout.py  effect_orbitingvolley.py  effect_orbittingvolley.py  effect_overflow.py  effect_pour.py  effect_print.py  effect_rain.py  effect_random_sequence.py  effect_rings.py  effect_rowmerge.py  effect_rowslide.py  effect_scattered.py  effect_shootingstar.py  effect_slice.py  effect_slide.py  effect_smoke.py  (+24 more)
terminaltexteffects/engine/: __init__.py  animation.py  base_character.py  base_config.py  base_effect.py  motion.py  terminal.py
testinput/: 3d_title.txt  block_title.txt  canvas.txt  color_sequence_test.txt  demo.txt  dense_text.txt  fade_title.txt  fullscreen_text.txt  modify.txt  shadow.txt  single_letter_open_area.txt  solid.txt  tall_text.txt  titles.txt  whitespace.txt  wide_text.txt
tests/: conftest.py  coverage_tool_colorterm.py  coverage_tool_dimos.py  test_animation.py  test_argsvalidator.py  test_cli.py  test_colorterm.py  test_effects.py  test_gradient.py  test_gradient_direction.py  test_hexterm.py  test_in_elastic.py  test_module_dimos.py  test_perf_benchmark_effects.py  test_tte.py  tool_gradient_direction_Andreas.py  tool_in_elastic_Andreas.py
tests/testinput/: canvas.txt  (+9 more)
tools/: __init__.py
tutorials/: index.html
utils/: ansi.py  terminaloperations.py  utils.py
(+166 files in other folders)
