[tool.poetry]
name = "terminaltexteffects"
version = "0.11.0"
description = "TerminalTextEffects (TTE) is a terminal visual effects engine."
authors = ["Chris <741258@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ChrisBuilds/terminaltexteffects"
documentation = "https://chrisbuilds.github.io/terminaltexteffects/"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
tte = "terminaltexteffects.__main__:main"

[tool.ruff]
show-fixes = true
line-length = 120

[tool.ruff.lint]
ignore = [
    "C90",
    "ANN401",
    "EXE",
    "RUF009", # function-call-in-dataclass-default-argument
    "S311",   # suspicious-non-cryptographic-random-usage
]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = [
    "S101",   # assert
    "SLF001", # private member access
]

[tool.pytest.ini_options]
console_output_style = "progress"
minversion = "6.0"
addopts = ["--capture=sys", "--strict-markers", "--strict-config", "-ra"]
markers = [
    "manual: subset to run manually",
    "visual: visually inspect effects",
    "effects: quick effect tests",
    "engine: engine tests",
    "animation: animation tests",
    "motion: motion tests",
    "terminal: terminal tests",
    "base_character: base character tests",
    "utils: utility tests",
    "smoke: quick tests covering over 90% of code",
]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
