[project]
name = "terminaltexteffects"
version = "0.12.1"
description = "TerminalTextEffects (TTE) is a terminal visual effects engine."
authors = [{ name = "Chris", email = "741258@pm.me" }]
requires-python = "~=3.8"
readme = "README.md"
license = "MIT"

[project.urls]
Repository = "https://github.com/ChrisBuilds/terminaltexteffects"
Documentation = "https://chrisbuilds.github.io/terminaltexteffects/"

[project.scripts]
tte = "terminaltexteffects.__main__:main"

[tool.ruff]
show-fixes = true
line-length = 120

[tool.ruff.lint]
ignore = [
    "C90",
    "ANN401",
    "EXE",
    "PLR0912", # too many branches
    "PLR0913", # too many function args
    "PLR2004", # magic numbers
    "RUF009",  # function-call-in-dataclass-default-argument
    "S311",    # suspicious-non-cryptographic-random-usage
    "SLF001",  # private member access
    "TRY003",  # f-strings in exception message
    "T201",    # printing
]
select = ["ALL"]
fixable = ["ALL"]
extend-fixable = ["EM102"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"**/tests/*" = [
    "S101", # assert

]

[tool.pytest.ini_options]
console_output_style = "progress"
minversion = "6.0"
addopts = ["--capture=sys", "--strict-markers", "--strict-config", "-ra"]
markers = [
    "manual: subset to run manually",
    "visual: visually inspect effects",
    "effects: quick effect tests",
    "engine: engine tests",
    "animation: animation tests",
    "motion: motion tests",
    "terminal: terminal tests",
    "base_character: base character tests",
    "utils: utility tests",
    "smoke: quick tests covering over 90% of code",
]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
